Update build versions